@dev 使用本地SQLite数据库、优化部分代码逻辑