@@ -1,15 +1,9 @@
 package com.xjx.bookmeeting.utils;
 
+import com.alibaba.fastjson.JSON;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
-import org.springframework.beans.BeanUtils;
-import org.springframework.beans.BeansException;
 
-import java.beans.PropertyDescriptor;
-import java.io.UnsupportedEncodingException;
-import java.lang.reflect.InvocationTargetException;
-import java.lang.reflect.Method;
-import java.lang.reflect.Modifier;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.util.Base64;
@@ -27,11 +21,7 @@ public class OtherUtils {
         if (s == null) {
             return null;
         }
-        try {
-            return URLEncoder.encode(s, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            return null;
-        }
+        return URLEncoder.encode(s, StandardCharsets.UTF_8);
     }
 
     public static void sleep(long milliseconds) {
@@ -42,45 +32,11 @@ public class OtherUtils {
         }
     }
 
-    /**
-     * 只复制 source 对象的非空属性到 target 对象上
-     *
-     * @param source source
-     * @param target target
-     * @throws BeansException BeansException
-     */
-    public static void copyNoNullProperties(Object source, Object target) {
-        if (source == null || target == null) {
-            return;
+    public static <FROM, TO> TO convert(FROM from, Class<TO> toClass) {
+        if (from == null) {
+            return null;
         }
-
-        Class<?> actualEditable = target.getClass();
-        PropertyDescriptor[] targetPds = BeanUtils.getPropertyDescriptors(actualEditable);
-        for (PropertyDescriptor targetPd : targetPds) {
-            if (targetPd.getWriteMethod() != null) {
-                PropertyDescriptor sourcePd = BeanUtils.getPropertyDescriptor(source.getClass(), targetPd.getName());
-                if (sourcePd != null && sourcePd.getReadMethod() != null) {
-                    try {
-                        Method readMethod = sourcePd.getReadMethod();
-                        if (!Modifier.isPublic(readMethod.getDeclaringClass().getModifiers())) {
-                            readMethod.setAccessible(true);
-                        }
-                        Object value = readMethod.invoke(source);
-                        // 这里判断以下 value 是否为空 当然这里也能进行一些特殊要求的处理 例如绑定时格式转换等等
-                        if (value != null) {
-                            Method writeMethod = targetPd.getWriteMethod();
-                            if (!Modifier.isPublic(writeMethod.getDeclaringClass().getModifiers())) {
-                                writeMethod.setAccessible(true);
-                            }
-                            writeMethod.invoke(target, value);
-                        }
-                    } catch (InvocationTargetException | IllegalAccessException e) {
-                        log.warn(e.getMessage(), e);
-                        return;
-                    }
-                }
-            }
-        }
+        return JSON.parseObject(JSON.toJSONString(from), toClass);
     }
 
     public static String encrypt(String s) {
